syntax = "proto3";

package user;

service UserService {
  rpc GetUserInfo (UserIdRequest) returns (UserInfoResponse);
  rpc GetUserStats (UserIdRequest) returns (UserStatsResponse);
  rpc CreateUserProfile (UserIdRequest) returns (UserProfileResponse);
  rpc UpdateUserProfile (UpdateUserRequest) returns (UserInfoResponse);
  rpc FollowTag (FollowTagRequest) returns (FollowTagResponse);
  rpc UnFollowTag (FollowTagRequest) returns (FollowTagResponse);
  rpc GetFollowTag (GetFollowTagRequest) returns (GetFollowTagResponse);
}

// Request
message UserIdRequest {
  string user_id = 1;
}
message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string avatar_url = 3;
}
message FollowTagRequest {
  string user_id = 1;
  string tag_id = 2;
}
message GetFollowTagRequest {
  string user_id = 1;
}

// Response
message UserInfoResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string avatar_url = 4;
  repeated Tag followed_tags = 5;
  string created_at = 6;
}
message UserProfileResponse {
  string user_id = 1;
  string avatar_url = 2;
  int32 post_count = 3;
  repeated Tag followed_tags = 4;
  int32 thanks_received = 5;
}
message FollowTagResponse {
  bool success = 1;
}
message GetFollowTagResponse {
  repeated Tag tags = 1;
}
message UserStatsResponse {
  int32 post_count = 1;
  int32 thanks_received = 2;
  int32 total_views = 3;
}

// Type
message Tag {
  string id = 1;
  string name = 2;
}